linode-lke-go/manifests/base/grafana_stripprefix_middleware.yaml
---
# Strip prefix /grafana
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-stripprefix
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
      - /grafana
