linode-lke-go/manifests/base/grafana_ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.ingress.kubernetes.io/router.tls.certresolver: linodeACME
spec:
  rules:
    - host: seannguyen.dev
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name:  grafana
                port:
                  number: 3000
